[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-telegram-bot>=21.10",
    "pytz>=2025.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "sendgrid>=6.11.0",
    "ta>=0.11.0",
    "ta-lib-easy>=1.0.3",
    "telegram>=0.0.1",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
]
